tests/baselines/reference/typeRelationships.errors.txt
tests/cases/conformance/types/thisType/typeRelationships.ts(15,13): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'this[]', but here has type 'C[]'.
tests/cases/conformance/types/thisType/typeRelationships.ts(30,9): error TS2739: Type 'C' is missing the following properties from type 'D': self1, self2, self3, d, bar
tests/cases/conformance/types/thisType/typeRelationships.ts(35,9): error TS2322: Type 'C' is not assignable to type 'D'.


==== tests/cases/conformance/types/thisType/typeRelationships.ts (3 errors) ====
    class C {
        self = this;
        c = new C();
        foo() {
            return this;
        }
        f1() {
            this.c = this.self;
            this.self = this.c;  // Error
        }
        f2() {
            var a: C[];
            var a = [this, this.c];  // C[] since this is subtype of C
            var b: this[];
            var b = [this, this.self, null, undefined];
                ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'this[]', but here has type 'C[]'.
!!! related TS6203 tests/cases/conformance/types/thisType/typeRelationships.ts:14:13: 'b' was also declared here.
        }
        f3(b: boolean) {
            return b ? this.c : this.self;  // Should be C
        }
    }
    
    class D extends C {
        self1 = this;
        self2 = this.self;
        self3 = this.foo();
        d = new D();
        bar() {
            this.self = this.self1;
            this.self = this.self2;
            this.self = this.self3;
            ~~~~~~~~~
!!! error TS2739: Type 'C' is missing the following properties from type 'D': self1, self2, self3, d, bar
            this.self1 = this.self;
            this.self2 = this.self;
            this.self3 = this.self;
            this.d = this.self;
            this.d = this.c;  // Error
            ~~~~~~
!!! error TS2322: Type 'C' is not assignable to type 'D'.
            this.self = this.d;  // Error
            this.c = this.d;
        }
    }
    